# keel

./: .gitignore  ARCHITECTURE.md  BRAINSTORMING_TRANSCRIPT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  ROADMAP.md  SCALING.md  SPIN.md  justfile  lefthook.yml  package.json  pnpm-lock.yaml  spin.toml
.claude/: settings.json
.claude/agents/: bdd-tester.md  component-scaffolder.md  edge-optimizer.md  product-manager.md  repository-implementer.md  scale-architect.md  spin-consultant.md  ux-researcher.md  vp-engineering.md  wasi-feasibility.md  wit-designer.md
.github/workflows/: ci.yml
adrs/: 001-spin-spinkube-linode-lke.md
apps/e2e-keel/: Cargo.toml  README.md  spin.toml
apps/e2e-keel/src/: lib.rs
components/infrastructure/kv-rocksdb/: Cargo.toml
components/infrastructure/kv-rocksdb/src/: lib.rs
components/infrastructure/kv-rocksdb/wit/: world.wit
components/infrastructure/postgres-sql/: Cargo.toml
components/infrastructure/postgres-sql/src/: lib.rs
components/infrastructure/postgres-sql/tests/: bdd_tests.rs
components/infrastructure/sql-cloudflare-do/: Cargo.toml
components/infrastructure/sql-cloudflare-do/src/: lib.rs
components/infrastructure/sql-spin-sqlite/: Cargo.toml
components/infrastructure/sql-spin-sqlite/src/: lib.rs
components/infrastructure/sql-spin-sqlite/wit/: world.wit
components/infrastructure/sql-sqlite/: Cargo.toml
components/infrastructure/sql-sqlite/features/: sql-operations.feature
components/infrastructure/sql-sqlite/src/: lib.rs
crates/keel-testing/: Cargo.toml
crates/keel-testing/src/: lib.rs
feasability/: 001-wasi-http-client-feasibility.md  002-spin-sqlite-feasibility.md
feasability_spin-sanity/: Cargo.toml  spin.toml
feasability_spin-sanity/src/: lib.rs
personas/: component-developer.md  data-privacy-officer.md  devops-engineer.md  early-adopter-cto.md  edge-provider.md  enterprise-architect.md  investor-vc.md  security-team-lead.md  startup-founder.md  transformation-consultant.md  wasi-community.md
scripts/: e2e-run.sh
spin-sanity/: Cargo.toml  spin.toml
spin-sanity/src/: lib.rs
todos/: phase-2-infrastructure.md
wit/: kv.wit  sql.wit  world.wit
