[workspace]
resolver = "2"
members = [
    "components/infrastructure/sql-sqlite",
    "components/infrastructure/sql-cloudflare-do",
    "components/infrastructure/sql-spin-sqlite",
    "components/infrastructure/kv-rocksdb",
    "crates/keel-testing",
    "apps/e2e-keel"
]

[workspace.dependencies]
wit-bindgen = "0.36"
wasmtime = "25"
wasmtime-wasi = "25"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing dependencies
cucumber = "0.21"
futures = "0.3"
