[package]
name = "keel-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
cucumber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Additional test-specific dependencies can go here
