[package]
name = "kv-rocksdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
keel-testing = { path = "../../../crates/keel-testing" }
cucumber = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3.0"
