[package]
name = "kv-rocksdb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[package.metadata.component]
package = "keel:infrastructure"

[package.metadata.component.dependencies]

