[package]
name = "sql-cloudflare-do"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

worker = { version = "0.3", optional = true }

# For WASM compatibility
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.component]
package = "keel:infrastructure"

[package.metadata.component.dependencies]

[features]
# Default to the in-repo mock backend for local/dev.
default = ["mock"]

# Mock backend implemented in this crate (no Cloudflare binding required).
mock = []

# Real Cloudflare Durable Objects backend (WIP). Enables the `worker` crate.
cloudflare-do = ["dep:worker"]
