[package]
name = "sql-spin-sqlite"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Spin SDK for SQLite host integration
spin-sdk = "3"

[package.metadata.component]
package = "keel:infrastructure"

[package.metadata.component.dependencies]

