[package]
name = "sql-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
# Default to rlib for non-wasm targets to allow native workspace builds

[target.'cfg(target_arch = "wasm32")'.lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
keel-testing = { path = "../../../crates/keel-testing" }
cucumber = { workspace = true }
tokio-test = { workspace = true }
